<resources>
	<string name="app_name">ESCOMobile_alpha</string>
	<string name="txt_main_name">ESCOMobile</string>
	<string name="img_main_logo_desc">Logo de ESCOM</string>
	<string name="btn_registrarse">Registrarse</string>
	<string name="btn_iniciar_sesion">Iniciar sesión</string>
	<string name="btn_continuar_sin_registro">Continuar sin registrarse</string>
	<string name="title_activity_maps">Map</string>
	<string name="title_activity_registro">ESCOMobile</string>
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="map_request_denied">Lo sentimos, no podemos acceder a tu ubicación.</string>
	<string name="btn_planta_baja">PB</string>
	<string name="btn_segundo_piso">P2</string>
	<string name="btn_primer_piso">P1</string>
	<string name="txt_hint_primer_ap">Apellido Paterno</string>
	<string name="txt_hint_nombre">Nombre</string>
	<string name="txt_hint_boleta_empleado">Boleta / # Empleado</string>
	<string name="txt_hint_segundo_ap">Apellido Materno</string>
	<string name="txt_hint_mail">Correo electrónico</string>
	<string name="txt_hint_pass">Contraseña (mínimo 8 caracteres)</string>
	<string name="txt_hint_pass2">Repite tu contraseña</string>
	<string name="lbl_iniciar_como_profesor">Iniciar sesión como profesor</string>
	<string name="lbl_condiciones">He leído y acepto términos y condiciones</string>
	<string name="lbl_registrarse">Registrarse</string>
	<string name="lbl_ya_tiene_cuenta">¿Ya tienes una cuenta? ¡Entra!</string>
	<string name="txt_sin_cuenta_registrate">¿No tienes una cuenta? ¡Registrate!</string>
	<string name="txt_olvide_pass">Olvidé mi contraseña</string>
	<string name="btn_ingresar">Ingresar</string>
	<string name="dmenu_dashboard">Menucito principal</string>
	<string name="dmenu_ver_mapa">Ver mapa</string>
	<string name="dmenu_eventos">Eventos</string>
	<string name="dmenu_citas">Citas</string>
	<string name="dmenu_profesor">Profesores</string>
	<string name="dmenu_bolsa_de_trabajo">Bolsa de trabajo</string>
	<string name="dmenu_editar_perifl">Modificar información</string>
	<string name="dmenu_cerrar_sesion">Cerrar sesión</string>
	<string name="dmenu_borar_cuenta">Eliminar cuenta</string>
	<string name="open">Open</string>
	<string name="close">Close</string>
	<string name="title_activity_manager">ManagerActivity</string>
	<string name="nav_header_title">Jhon Lennon</string>
	<string name="nav_header_subtitle">thebeatles@gmail.com.uk</string>
	<string name="nav_header_desc">Navigation header</string>
	<string name="action_settings">Settings</string>
	<string name="action_search">Buscar profesor</string>
	<string name="txt_hint_nombre_empresa">Nombre empresa</string>
	<string name="txt_hint_puesto">Arquitecto de software</string>
	<string name="txt_hint_sueldo">Sueldo: $45, 000</string>
	<string name="txt_hint_logo_empresa">logo empresa</string>
	<string name="txt_hint_horario">Horario:</string>
	<string name="txt_hint_horario2">Horario</string>
	<string name="txt_hint_hora">L -V 9:00:00 a 18:00:00 hrs</string>
	<string name="txt_hint_prestaciones">Prestaciones:</string>
	<string name="txt_hint_requisitos">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ullamcorper tellus vestibulum congue ornare. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Phasellus venenatis nibh a ligula porta, congue ultricies nisi tincidunt. Etiam sit amet sem velit. Vivamus ac molestie lacus. Phasellus luctus eros in ultricies dignissim. Nunc fermentum tincidunt risus accumsan congue. Aliquam eu augue aliquet, cursus metus sed, finibus nibh. Sed ac felis efficitur, tempor elit id, iaculis magna. Vestibulum placerat mollis erat et pharetra. Ut eu neque mauris. Phasellus consequat justo eget euismod ultrices. Morbi dictum, nibh in feugiat egestas, orci ligula ultrices urna, et gravida lacus justo tempus turpis. Duis cursus sagittis ipsum, ac varius nunc.</string>
	<string name="txt_hint_contacto">Contacto:</string>
	<string name="txt_hint_medio_contacto">correo: escomobile@outlook.com teléfono: 5545542343</string>
	<string name="preferences_login_key">com.example.master.escomobile.PREFERENCES_LOGIN</string>
	<string name="hint_profesores">profesores</string>
	<string name="hint_grupos">grupos</string>
	<string name="hint_salones">salones</string>
	<string name="hint_academias">academias</string>
	<string name="hint_progress_bar">Espera un momento</string>
	<string name="txt_hint_calificar">Calificar</string>
	<string name="txt_hint_cita">Solicitar cita</string>
	<string name="btn_desc_horario_profesor">Horario</string>
	<string name="btn_desc_estadisticas">Estadisticas</string>
	<string name="btn_desc_ubicar_mapa">Ubicar en mapa</string>
	<string name="img_desc_foto_profesor">foto de profesor</string>
	<string name="txt_perfil_profesor">Perfil de profesor</string>
	<string name="txt_profesor_de_escom">Profesor de ESCOM</string>
	<string name="txt_comentarios_sobre_el_profesor">Comentarios sobre el profesor</string>
	<string name="txt_hint_opinion">Danos tu opinión acerca del desempeño académico del profesor. Los campos marcados con * son obligatorios.</string>
	<string name="txt_puntuacion">* Tu puntuación</string>
	<string name="txt_hint_comentario">Comentario</string>
	<string name="txt_hint__solicitar_cita">Completa los siguientes campos para solicitar agendar tu cita.\nÚnicamente podrás agendar una cita con aquellos profesores que se hayan registrado en la aplicación.</string>
	<string name="txt_hint_solicitar_cita">
		Gracias por usar el sistema de citas de ESCOMobile.\n
		Para comenzar a disfrutar de este beneficio con tus profesores debes saber que:\n
		1) Debes introducir todos los campos desplegados en la pantalla.\n
		2) Para poder agendar una cita con algún profesor, éste debe de estar registrado (tener una cuenta) en el sistema, de lo contrario no podrás solicitar agendar con él.\n
		3) Los profesores que encontrarás para seleccionar en este apartado son solo aquellos que se encuentran registrados. La lista se actualiza periódicamente para brindarte más posibilidades en caso de haber nuevos registros.\n
		4) Debes expresar a tu profesor un motivo por el cual deseas obtener la cita, éste será leído por tu profesor y le ayudará a decidir sobre aceptar o no tu cita.\n
		5) Tu nombre puede ser consultado por tu profesor cuando solicitas agendar una cita.\n
		6) La desición de tu profesor sobre la cita es única y personal, puede depender, entre otras cosas, de asuntos personales o de tiempo.\n
		7) El lugar en el que se desempeña la cita es por defecto el cubículo del profesor.\n
		8) Una vez solicitada la cita, no podrás modificar la información introducida\n
		9) La puede ser cancelada (por ti o el profesor) antes de que ésta sea aprobada o rechazada, incluso una ves aprobada podrá se podrá cancelar, siempre y cuando falten más de dos hora para que llegue el tiempo propuesto.\n
		10) El cualquiera de los casos, a la hora de solicitar agendar una cita, cuando ésta es aceptada, rechazada o cancelada se te notificará al respecto, o bien al profesor en caso de ser tú quien cancela.\n
		11) Puedes solicitar agendar más citas con el mismo u otros profesores registradas, y el que éstas se acepten o rechacen no afecta para nada en el cómo usas la app, a tu información o tu perfil. \n
		12) El uso que le des al apartado es tu responsabilidad, úsalo con respeto. \n
	</string>
	<string name="btn_hint_acpetar">Aceptar</string>
	<string name="txt_hint_motivo_cota">Motivo de la cita</string>
	<string name="img_description">imagen</string>
	<string name="txt_tipo_cita">Tipo de cita</string>
	<string name="txt_hora_cita">Hora de la cita</string>
	<string name="txt_fecha_cita">Fecha de la cita</string>
	<string name="txt_hint_estadisticas">Estadísticas</string>
	<string name="txt_hint_ubicar_mapa">Ubicar en mapa</string>
</resources>