<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto" >
	
	<data>
		<variable
			name="profesor"
			type="com.example.master.escomobile_alpha.modelo.entidad.Profesor"/>
	</data>
	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		
		<android.support.v7.widget.Toolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:background="@color/colorPrimary"
			android:elevation="5dp"
			android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
			app:title="ESCOMobile"
			app:titleTextColor="@android:color/white" />
		
		<ImageView
			android:id="@+id/imageView3"
			android:layout_width="80dp"
			android:layout_height="80dp"
			android:layout_marginStart="24dp"
			android:layout_marginTop="8dp"
			android:contentDescription="@string/img_main_logo_desc"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/toolbar"
			app:srcCompat="@mipmap/ic_launcher_round" />
		
		<TextView
			android:id="@+id/txtNombre"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_marginEnd="8dp"
			android:layout_marginBottom="8dp"
			android:padding="5dp"
			android:text="@{profesor.nombre}"
			android:textSize="18sp"
			app:layout_constraintBottom_toTopOf="@+id/txtPerfil"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toEndOf="@+id/imageView3"
			app:layout_constraintTop_toTopOf="@+id/imageView3" />
		
		<TextView
			android:id="@+id/txtPerfil"
			android:layout_width="0dp"
			android:layout_height="20dp"
			android:layout_marginEnd="8dp"
			android:paddingLeft="5dp"
			android:text="@string/txt_perfil_profesor"
			app:layout_constraintBottom_toBottomOf="@+id/imageView3"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toEndOf="@+id/imageView3" />
		
		<TextView
			android:id="@+id/txtAcademia"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="24dp"
			android:layout_marginTop="24dp"
			android:text="@{profesor.cubiculo.academia}"
			android:textSize="18sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/imageView3" />
		
		<TextView
			android:id="@+id/txtCubiculo"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="24dp"
			android:layout_marginTop="8dp"
			android:text="@{profesor.cubiculo.id}"
			android:textSize="18sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/txtAcademia" />
		
		<TextView
			android:id="@+id/txtCalificacion"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="24dp"
			android:layout_marginTop="8dp"
			android:text="@{profesor.calificacion}"
			android:textSize="18sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/txtCubiculo" />
		
		<LinearLayout
			android:id="@+id/linearLayout2"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="32dp"
			android:layout_marginStart="32dp"
			android:layout_marginTop="24dp"
			android:orientation="horizontal"
			android:padding="5dp"
			android:weightSum="3"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/txtCalificacion">
			
			<ImageButton
				android:id="@+id/btnHorario"
				android:layout_width="wrap_content"
				android:layout_height="54dp"
				android:layout_margin="10dp"
				android:layout_weight="1"
				android:background="@drawable/border_green"
				android:contentDescription="@string/btn_desc_horario_profesor"
				android:elevation="4dp"
				app:srcCompat="@drawable/ic_profesor_horario" />
			
			<ImageButton
				android:id="@+id/btnEstadisticas"
				android:layout_width="wrap_content"
				android:layout_height="54dp"
				android:layout_margin="10dp"
				android:layout_weight="1"
				android:background="@drawable/border_blue"
				android:contentDescription="@string/btn_desc_estadisticas"
				android:elevation="4dp"
				app:srcCompat="@drawable/ic_profesor_estadisticas" />
			
			<ImageButton
				android:id="@+id/btnMapa"
				android:layout_width="wrap_content"
				android:layout_height="54dp"
				android:layout_margin="10dp"
				android:layout_weight="1"
				android:background="@drawable/border_button"
				android:contentDescription="@string/btn_desc_ubicar_mapa"
				android:elevation="4dp"
				app:srcCompat="@drawable/ic_profesor_mapa" />
		</LinearLayout>
		
		<Button
			android:id="@+id/btnCalificar"
			android:layout_width="0dp"
			android:layout_height="50dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="16dp"
			android:layout_marginEnd="8dp"
			android:background="@drawable/button_main_custom"
			android:text="@string/txt_hint_calificar"
			app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
			app:layout_constraintStart_toStartOf="@+id/linearLayout2"
			app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />
		
		<LinearLayout
			android:id="@+id/linearLayout4"
			android:layout_width="0dp"
			android:layout_height="20dp"
			android:orientation="horizontal"
			android:weightSum="3"
			app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
			app:layout_constraintStart_toStartOf="@+id/linearLayout2"
			app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
			
			<TextView
				android:id="@+id/textView9"
				android:layout_width="32dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/txt_hint_horario2"
				android:textAlignment="center" />
			
			<TextView
				android:id="@+id/textView10"
				android:layout_width="25dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/txt_hint_estadisticas"
				android:textAlignment="center" />
			
			<TextView
				android:id="@+id/textView8"
				android:layout_width="35dp"
				android:layout_height="35dp"
				android:layout_weight="1"
				android:text="@string/txt_hint_ubicar_mapa"
				android:textAlignment="center" />
		</LinearLayout>
		
		<Button
			android:id="@+id/btnCita"
			android:layout_width="0dp"
			android:layout_height="50dp"
			android:layout_marginBottom="8dp"
			android:background="@drawable/button_main_custom"
			android:text="@string/txt_hint_cita"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="@+id/btnCalificar"
			app:layout_constraintStart_toStartOf="@+id/btnCalificar"
			app:layout_constraintTop_toBottomOf="@+id/btnCalificar" />
	
	</android.support.constraint.ConstraintLayout>
</layout>