<?xml version="1.0" encoding="utf-8"?>
<layout>
	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@android:color/white">
		
		<android.support.constraint.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			
			<ImageView
				android:id="@+id/foto_profesor"
				android:layout_width="80dp"
				android:layout_height="80dp"
				android:layout_marginStart="24dp"
				android:layout_marginTop="24dp"
				android:contentDescription="@string/img_desc_foto_profesor"
				android:src="@mipmap/ic_launcher_round"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />
			
			<TextView
				android:id="@+id/txt_nombre_profesor"
				android:layout_width="0dp"
				android:layout_height="0dp"
				android:layout_marginEnd="8dp"
				android:layout_marginStart="8dp"
				android:padding="5dp"
				android:text="@string/hint_profesores"
				android:textSize="18sp"
				app:layout_constraintBottom_toTopOf="@+id/textView3"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="1.0"
				app:layout_constraintStart_toEndOf="@+id/foto_profesor"
				app:layout_constraintTop_toTopOf="@+id/foto_profesor" />
			
			<TextView
				android:id="@+id/textView3"
				android:layout_width="0dp"
				android:layout_height="20dp"
				android:layout_marginEnd="8dp"
				android:layout_marginStart="8dp"
				android:text="@string/txt_profesor_de_escom"
				app:layout_constraintBottom_toBottomOf="@+id/foto_profesor"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toEndOf="@+id/foto_profesor" />
			
			<TextView
				android:id="@+id/textView4"
				android:layout_width="0dp"
				android:layout_height="40dp"
				android:layout_marginBottom="8dp"
				android:layout_marginEnd="16dp"
				android:layout_marginStart="16dp"
				android:layout_marginTop="16dp"
				android:paddingTop="5dp"
				android:text="@string/txt_comentarios_sobre_el_profesor"
				android:textAlignment="center"
				android:textColor="@color/colorPrimary"
				android:textSize="18sp"
				android:textStyle="bold"
				app:layout_constraintBottom_toTopOf="@+id/recyclerView"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/foto_profesor" />
			
			<android.support.v7.widget.RecyclerView
				android:id="@+id/recyclerView"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="16dp"
				android:layout_marginEnd="16dp"
				android:layout_marginStart="16dp"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.0"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/textView4" />
		</android.support.constraint.ConstraintLayout>
	</ScrollView>
</layout>
